--- a/package.json
+++ b/package.json
@@ -66,11 +66,11 @@
     "@dcloudio/vite-plugin-uni": "3.0.0-4080420251103001",
     "@vue/language-server": "^3.2.4",
     "@vue/runtime-core": "^3.4.21",
-    "@vue/tsconfig": "^0.8.1",
+    "@vue/tsconfig": "0.7.0",
     "sass": "^1.97.3",
     "typescript": "5.6.2",
     "typescript-language-server": "^5.1.3",
     "vite": "5.2.8",
-    "vue-tsc": "^1.0.24"
+    "vue-tsc": "^2.2.12"
   }
 }
